# mpc-package

./: .gitignore  CMakeLists.txt  README.md  install.sh  mpc_packageConfig.cmake.in
demo/: CMakeLists.txt  Test.cpp  Test.h  hostfile.txt  main.cpp
include/: ArithmeticShare.h  Executor.h
include/api/: IntSecret.h  Secret.h
include/arithmetic/: AdditionShareExecutor.h  IntShareExecutor.h
include/arithmetic/addition/: AdditionShareExecutor.h
include/arithmetic/multiplication/: AbstractMultiplicationShareExecutor.h
include/bmt/: AbstractMultiplicationTripleGenerator.h  FixedTripleGenerator.h  RsaOtTripleGenerator.h
include/boolean/: BoolShareExecutor.h
include/boolean/and/: AbstractAndShareExecutor.h  RsaOtAndShareExecutor.h
include/boolean/xor/: XorShareExecutor.h
include/comparison/: ComparisonExecutor.h
include/data/: BoolSecret.h  IntSecret.h  Secret.h
include/demo/: AbstractDemoAdditionShareExecutor.h
include/executor/: AbstractExecutor.h  Executor.h
include/executor/arithmetic/: AbstractAdditionShareExecutor.h  AbstractIntAdditionShareExecutor.h  AbstractKBitAdditionSecretSharing.h  AdditiveExecutor.h  CompleteAdditionExecutor.h  MultiplicationExecutor.h  PartialAdditionExecutor.h
include/executor/bmt/: AbstractMulTripleExecutor.h  AbstractMultiplicationTripleGenerator.h  FixedTripleExecutor.h  FixedTripleGenerator.h  MulTripleExecutor.h  RsaOtTripleExecutor.h  RsaOtTripleGenerator.h
include/executor/ot/: RsaOtExecutor.h
include/executor/ot/one_of_two/: RsaOtExecutor.h
include/executor/share/: AbstractBoolShareExecutor.h  AbstractIntShareExecutor.h  AbstractIntegerShareExecutor.h  BoolShareExecutor.h  IntShareExecutor.h
include/executor/share/arithmetic/: AbstractIntegerShareExecutor.h  CompleteAdditionShareExecutor.h  FixedMultiplicationShareExecutor.h  MultiplicationShareExecutor.h  PartialAdditionShareExecutor.h  RsaOtMultiplicationShareExecutor.h
include/executor/share/boolean/: AbstractBoolShareExecutor.h  XorBooleanShareExecutor.h
include/executor/share/comparison/: ComparisonExecutor.h
include/ot/: RsaOtExecutor.h
include/ot/one_of_two/: RsaExecutor.h  RsaOtExecutor.h
include/share/: Executor.h  ShareExecutor.h
include/share/arithmetic/: CompleteAdditionExecutor.h  CompleteAdditionShareExecutor.h  IntShareExecutor.h  MultiplicationExecutor.h  MultiplicationShareExecutor.h  PartialAdditionExecutor.h  PartialAdditionShareExecutor.h
include/share/arithmetic/addition/: AdditionShareExecutor.h
include/share/arithmetic/multiplication/: AbstractMultiplicationShareExecutor.h  FixedMultiplicationShareExecutor.h  RsaOtMultiplicationShareExecutor.h
include/share/boolean/: BoolShareExecutor.h
include/share/boolean/and/: AbstractAndShareExecutor.h  FixedAndShareExecutor.h  RsaOtAndShareExecutor.h
include/share/boolean/xor/: XorShareExecutor.h
include/share/comparison/: ComparisonExecutor.h
include/utils/: Crypt.h  CryptUtils.h  Crypto.h  FixedMultiplicationTripleHolder.h  Log.h  Math.h  MathUtils.h  Mpi.h  MpiUtils.h  System.h  Utils.h
python_scripts/: triple_generator.py
scripts/: triple_generator.py
shell_scripts/: install.sh  test.sh
src/: AbstractDemoAdditionShareExecutor.cpp  AbstractExecutor.cpp  AbstractKBitAdditionSecretSharing.cpp  AdditiveExecutor.cpp  ArithmeticShare.cpp  CompleteAdditionExecutor.cpp  CompleteAdditionShareExecutor.cpp  CryptUtils.cpp  Executor.cpp  FixedMultiplicationShareExecutor.cpp  FixedMultiplicationTripleHolder.cpp  Log.cpp  MathUtils.cpp  MpiUtils.cpp  MultiplicationExecutor.cpp  MultiplicationShareExecutor.cpp  PartialAdditionExecutor.cpp  PartialAdditionShareExecutor.cpp  RsaExecutor.cpp  RsaOtExecutor.cpp  RsaOtMultiplicationShareExecutor.cpp  ShareExecutor.cpp  System.cpp  Utils.cpp
src/api/: BoolSecret.cpp  IntSecret.cpp  Secret.cpp
src/arithmetic/: AdditionShareExecutor.cpp  IntShareExecutor.cpp
src/arithmetic/addition/: AdditionShareExecutor.cpp
src/arithmetic/multiplication/: AbstractMultiplicationShareExecutor.cpp  FixedMultiplicationShareExecutor.cpp  RsaOtMultiplicationShareExecutor.cpp
src/bmt/: AbstractMultiplicationTripleGenerator.cpp  FixedTripleGenerator.cpp  RsaOtTripleGenerator.cpp
src/boolean/: BoolShareExecutor.cpp
src/boolean/and/: AbstractAndShareExecutor.cpp  FixedAndShareExecutor.cpp  RsaOtAndShareExecutor.cpp
src/boolean/xor/: XorShareExecutor.cpp
src/comparison/: ComparisonExecutor.cpp
src/data/: BoolSecret.cpp  IntSecret.cpp  Secret.cpp
src/executor/: AbstractExecutor.cpp  Executor.cpp
src/executor/arithmetic/: AbstractAdditionShareExecutor.cpp  AbstractIntAdditionShareExecutor.cpp
src/executor/bmt/: AbstractMulTripleExecutor.cpp  AbstractMultiplicationTripleGenerator.cpp  FixedTripleExecutor.cpp  FixedTripleGenerator.cpp  MulTripleExecutor.cpp  RsaOtTripleExecutor.cpp  RsaOtTripleGenerator.cpp
src/executor/ot/: RsaOtExecutor.cpp
src/executor/ot/one_of_two/: RsaOtExecutor.cpp
src/executor/share/: AbstractBoolShareExecutor.cpp  AbstractIntShareExecutor.cpp  AbstractIntegerShareExecutor.cpp  BoolShareExecutor.cpp  IntShareExecutor.cpp
src/executor/share/arithmetic/: AbstractIntegerShareExecutor.cpp
src/executor/share/boolean/: AbstractBoolShareExecutor.cpp  XorBooleanShareExecutor.cpp
src/executor/share/comparison/: ComparisonExecutor.cpp
src/ot/: RsaOtExecutor.cpp
src/share/arithmetic/: IntShareExecutor.cpp
src/share/arithmetic/addition/: AdditionShareExecutor.cpp
src/share/arithmetic/multiplication/: AbstractMultiplicationShareExecutor.cpp  (+2 more)
src/share/boolean/: BoolShareExecutor.cpp
src/share/comparison/: ComparisonExecutor.cpp
src/utils/: Crypt.cpp  Crypto.cpp  Log.cpp  Math.cpp  MathUtils.cpp  Mpi.cpp  MpiUtils.cpp  System.cpp  Utils.cpp
test/mulplication_share_fixed/: main.cpp
test/multiplication_share_fixed/: CMakeLists.txt
test/multiplication_share_fixed_triple/: CMakeLists.txt  FixedMultiplicationShareExecutor.cpp  FixedMultiplicationShareExecutor.h  main.cpp
test/multiplication_share_rsa_ot/: main.cpp
test_cases/demo/: CMakeLists.txt  hostfile.txt  main.cpp  test_cases.h
(+42 files in other folders)
